--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Our goals in this course are:<br>
 <div class="lineup"></div>
 <p>
 <h2>Best way to reach me and office hours</h2>
-You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic3@uic.edu</a> <br><br>We will have opportunity during class to schedule one-on-one meetings to discuss progress. <br><br>
+You can email me at my UIC address: <a href="mailto:studiobema@gmail.com">mjanic3@uic.edu</a> <br><br>We will have opportunity during class to schedule one-on-one virtual meetings to discuss progress. <br><br>
 </p>
 
 
@@ -169,6 +169,7 @@ In addition to the standard computer/laptop, I recommend the following:<br>
 <p>
 <h2>Course policies. You are expected to </h2><br>
 Work attentively and seriously. Maintain your concentration and focus as you work through all the exercises. There will be discussions and presentations during the class period. Arrive to class on time and stay for the entire class period. <br><br>
+Please be mindful and mute your Zoom unless you are speaking or presenting.<br><br>
 Do not copy work and pass it off as your own. This is a serious matter and can lead to a failing grade or worse. If you copy code from a site, please city it in your source code as you would in an essay.
 	<br><br>
 </p>
@@ -182,14 +183,42 @@ Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> 
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-TBD
+	
+	<a href="https://geo-ags.github.io/DES350/" target="_blank">Geo A.</a> <br>
+	<a href="https://tarmit3.github.io/DES350/" target="_blank">Trina A.</a> <br>
+
+<a href="https://butto99.github.io/DES350/" target="_blank">Omar B.</a> <br>
+	<a href="https://mbibay2.github.io/des350/" target="_blank">Michaella B.</a> <br>
+	<a href="https://acando2.github.io/DES350/" target="_blank">Ariane C.</a> <br>
+		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
+
+		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
+	
+				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
+				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
+
+
+			<a href="https://riocasso.github.io/DES350/" target="_blank">Romario O.</a> <br>
+
+	<a href="https://cpalacios48.github.io/DES350/" target="_blank">Christian P.</a> <br>	
+	<a href="https://cpeaco4.github.io/DES-350/ " target="_blank">Creighton P.</a> <br>	
+<a href="https://epined7.github.io/350/" target="_blank">Edgar P.</a> <br>	
+	<a href="https://eroman30.github.io/DES350/index.html" target="_blank">Elian R.</a> <br>	
+	<a href="https://djrobles.github.io/DES350/index.html" target="_blank">David R.</a> <br>	
+
+	<a href="https://enriquejr22.github.io/DES350/index.html" target="_blank">Enrique S.</a> <br>	
+
+	<a href="https://carolines-sketchbook.github.io/DES350/" target="_blank">Caroline S.</a> <br>	
+	<a href="https://nsamtani.github.io/DES350/" target="_blank">Neha S.</a> <br>	
+<a href="https://maywalan.github.io/DES350/" target="_blank">Matach W.</a> <br>
+	
   <br>
 </p>
 </div>
 
 <div class="lineupmain"></div>
 <div class="footer">
-Fall 2021<br>
+Fall 2020<br>
 UIC<br>
 	<br></div>
 
