--- a/resources.html
+++ b/resources.html
@@ -123,6 +123,13 @@ p    {color: black;}
 	
 <div class="lineup"></div>
 <p>
+<h2><a href="https://www.w3schools.com/css/css_intro.asp" target="_blank">CSS Online Tutorial</a><br></h2>
+</p>		
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="github_setup.pdf" target="_blank">Github Setup Instructions</a><br></h2>
 </p>	
 	
@@ -154,16 +161,41 @@ p    {color: black;}
 <div class="rightcolumn">
 <p>DES 350 / Fall, 2021<br>
 Mondays + Wednesdays<br>
-Instructor: <a href="http://studiobema.com" target="_blank">Michal Janicki</a></p>
+Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> </p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-TBD
+	
+	<a href="https://geo-ags.github.io/DES350/" target="_blank">Geo A.</a> <br>
+	<a href="https://tarmit3.github.io/DES350/" target="_blank">Trina A.</a> <br>
 
+<a href="https://butto99.github.io/DES350/" target="_blank">Omar B.</a> <br>
+	<a href="https://mbibay2.github.io/des350/" target="_blank">Michaella B.</a> <br>
+	<a href="https://acando2.github.io/DES350/" target="_blank">Ariane C.</a> <br>
+		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
+
+		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
+	
+				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
+				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
+
+
+			<a href="https://riocasso.github.io/DES350/" target="_blank">Romario O.</a> <br>
+
+	<a href="https://cpalacios48.github.io/DES350/" target="_blank">Christian P.</a> <br>	
+	<a href="https://cpeaco4.github.io/DES-350/ " target="_blank">Creighton P.</a> <br>	
+<a href="https://epined7.github.io/350/" target="_blank">Edgar P.</a> <br>	
+	<a href="https://eroman30.github.io/DES350/index.html" target="_blank">Elian R.</a> <br>	
+	<a href="https://djrobles.github.io/DES350/index.html" target="_blank">David R.</a> <br>	
+
+	<a href="https://enriquejr22.github.io/DES350/index.html" target="_blank">Enrique S.</a> <br>	
+
+	<a href="https://carolines-sketchbook.github.io/DES350/" target="_blank">Caroline S.</a> <br>	
+	<a href="https://nsamtani.github.io/DES350/" target="_blank">Neha S.</a> <br>	
+<a href="https://maywalan.github.io/DES350/" target="_blank">Matach W.</a> <br>
+	
+  <br>
 </p>
-
-
-
 </div>
 
 </body>
