--- a/calendar.html
+++ b/calendar.html
@@ -127,7 +127,7 @@ p    {color: black;}
 	<br>
 	<strong>Before the end of class:</strong><br>
 1. Make sure your GitHub and Calculator links work.<br>
-2. Style your calculator and upload to GitHube.<br>
+2. Style your calculator and upload to GitHub.<br>
 <br>
 </p>	
 	
