--- a/calendar.html
+++ b/calendar.html
@@ -117,6 +117,31 @@ p    {color: black;}
 	
 <!--		<div class="lineup"></div>-->
 
+	
+	
+	<p>
+<h3>Sep. 01</h3> <br>
+<strong>Class 4, Wednesday</strong><br>
+• 15 minute catch up lab to upload your styled calculator.<br>
+• Make sure your calculator is linked from the home page.<br>
+• Discussion of each piece of design.<br>
+• What about your design aligns with your design style? <br>
+• Does your design make the calculator easier or harder to use?<br>
+	<br>
+	<strong>For Wednesday:</strong><br>
+1. Create a mood-board for a new version of your calcuator.<br>
+2. Your moodboard should be 11w x 8.5h. You can create it in PSD or AI. <br>
+3. Focus on a specific designer whose work you like.<br>
+4. For the mood board, pull out that designers Color examples, type treatment.<br>
+5. In order to be useful, it should feature 8-10 examples of work, either details or full pieces. <br>
+<br>
+</p>	
+	
+	
+	
+		<div class="lineup"></div>
+	
+	
 <p>
 <h3>Aug. 30</h3> <br>
 <strong>Class 3, Monday</strong><br>
@@ -182,6 +207,8 @@ Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> 
 		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
 
 		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
+				<a href="https://jkatre3.github.io/DES350/" target="_blank">Jessica K.</a> <br>
+
 	
 				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
 				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
