--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> 
 		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
 
 		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
-	
+			<a href="https://jkatre3.github.io/DES350/" target="_blank">Jessica K.</a> <br>
+
 				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
 				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
 
