--- a/resources.html
+++ b/resources.html
@@ -120,6 +120,12 @@ p    {color: black;}
 	<h2><a href="http://github.com" target="_blank">http://github.com</a><br></h2>
 </p>
 
+
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.toptal.com/designers/visual-identity/guide-to-mood-boards" target="_blank">A Guide to Mood Boards</a><br></h2>
+</p>	
+	
 	
 <div class="lineup"></div>
 <p>
