--- a/calendar.html
+++ b/calendar.html
@@ -116,9 +116,28 @@ p    {color: black;}
 	
 	
 <!--		<div class="lineup"></div>-->
-
+	<p>
+<h3>Sep. 08</h3> <br>
+<strong>Class 5, Wednesday</strong><br>
+Lab for Review of Moodboards and draft of new calculator:<br>
+• Your moodboard should be 11w x 8.5h. You can create it in PSD or AI. <br>
+• Focus on a specific designer whose work you like.<br>
+• For the mood board, pull out that designers color samples and type treatment.<br>
+• In order to be useful, it should feature 8-10 examples of work, either details or full pieces. <br>
+• I will stop by and discuss individually who your designer is, and elements of the design.<br>
+	<br>
+	<strong>For Monday:</strong><br>
+1. Have a sketch of a new version of your calculator ready in AI or PSD:<br>
+1920x1080px size<br>
+	Based on your moodboard and chosen designer.<br>
+<br>
+</p>	
 	
 	
+	
+	
+	
+		<div class="lineup"></div>
 	<p>
 <h3>Sep. 01</h3> <br>
 <strong>Class 4, Wednesday</strong><br>
