--- a/calendar.html
+++ b/calendar.html
@@ -119,7 +119,7 @@ p    {color: black;}
 	<p>
 <h3>Sep. 08</h3> <br>
 <strong>Class 5, Wednesday</strong><br>
-• Presentation on the Principles of Good (Interaction) Design
+• Presentation on the Principles of Good (Interaction) Design<br>
 • Lab for Review of Moodboards and draft of new calculator:<br>
 • Your moodboard should be 11w x 8.5h. You can create it in PSD or AI. <br>
 • Focus on a specific designer whose work you like.<br>
