--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,22 @@ p    {color: black;}
 	
 	
 <!--		<div class="lineup"></div>-->
+	
+	<p>
+<h3>Sep. 13</h3> <br>
+<strong>Class 6, Monday</strong><br>
+• HTML DreamWeaver tutorial: Alignment.<br>
+• Lab for Review of sketches of new calculator.<br>
+• Begin programming prior to check-in.<br>
+• Individual check-ins.<br>
+	<br>
+	<strong>For Wednesday:</strong><br>
+• Make sure that I saw your sketch. If I did not, email it to me as a jpg or PDF.<br>
+<br>
+</p>	
+		
+	
+	<div class="lineup"></div>
 	<p>
 <h3>Sep. 08</h3> <br>
 <strong>Class 5, Wednesday</strong><br>
