--- a/resources.html
+++ b/resources.html
@@ -120,6 +120,12 @@ p    {color: black;}
 	<h2><a href="http://github.com" target="_blank">http://github.com</a><br></h2>
 </p>
 
+<div class="lineup"></div>
+<p>
+<h2><a href="https://www.w3schools.com/css/css_positioning.asp" target="_blank">CSS Positioning Guide</a><br></h2>
+</p>	
+	
+	
 
 <div class="lineup"></div>
 <p>
