--- a/resources.html
+++ b/resources.html
@@ -188,6 +188,7 @@ Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> 
 
 		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
 			<a href="https://jkatre3.github.io/DES350/" target="_blank">Jessica K.</a> <br>
+<a href="https://viannko.github.io/DES350/" target="_blank">Viann K.</a> <br>
 
 	
 				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
@@ -201,6 +202,7 @@ Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> 
 <a href="https://epined7.github.io/350/" target="_blank">Edgar P.</a> <br>	
 	<a href="https://eroman30.github.io/DES350/index.html" target="_blank">Elian R.</a> <br>	
 	<a href="https://djrobles.github.io/DES350/index.html" target="_blank">David R.</a> <br>	
+	<a href="https://frodri35.github.io/DES350/Index.html" target="_blank">Frida R.</a> <br>	
 
 	<a href="https://enriquejr22.github.io/DES350/index.html" target="_blank">Enrique S.</a> <br>	
 
