--- a/calendar.html
+++ b/calendar.html
@@ -3,6 +3,9 @@
 <head>
 	<meta name="viewport" content= "width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+	
+	
+	
 <style>
 body {background-color: #ececec;
 font-family: Helvetica, Arial, sans-serif; 
@@ -126,7 +129,7 @@ p    {color: black;}
 • Individual check-ins.<br>
 	<br>
 	<strong>For Wednesday:</strong><br>
-• Make sure that I saw your sketch. If I did not, email it to me as a jpg or PDF.<br>
+• Email your progress to me as a jpg or PDF.<br>
 <br>
 </p>	
 		
