--- a/calendar.html
+++ b/calendar.html
@@ -122,6 +122,21 @@ p    {color: black;}
 	
 	<p>
 <h3>Sep. 13</h3> <br>
+<strong>Class 7, Wednesday</strong><br>
+• Review of progress from the class: make sure you email your jpg to me.<br>
+• Lab for review of progress (programming and design).<br>
+• Individual check-ins.<br>
+	<br>
+	<strong>For Monday:</strong><br>
+• You should have a programmed calculator and come to class with questions.<br>
+<br>
+</p>	
+	
+	
+	
+		<div class="lineup"></div>
+	<p>
+<h3>Sep. 13</h3> <br>
 <strong>Class 6, Monday</strong><br>
 • HTML DreamWeaver tutorial: Alignment.<br>
 • Lab for Review of sketches of new calculator.<br>
