--- a/calendar.html
+++ b/calendar.html
@@ -128,7 +128,7 @@ p    {color: black;}
 • Individual check-ins.<br>
 	<br>
 	<strong>For Monday:</strong><br>
-• You should have a programmed calculator and come to class with questions.<br>
+• Please have a programmed calculator posted to GitHub before start of class Monday.<br>
 <br>
 </p>	
 	
