--- a/calendar.html
+++ b/calendar.html
@@ -119,6 +119,23 @@ p    {color: black;}
 	
 	
 <!--		<div class="lineup"></div>-->
+		<p>
+<h3>Sep. 20</h3> <br>
+<strong>Class 8, Monday</strong><br>
+• Kick-off for Project 2.<br>
+• Lecture about structure, grids and type on the web.<br>
+• Lab for review of progress (programming).<br>
+	<br>
+	<strong>For Wednesday:</strong><br>
+• First, ensure your programmed calculator works and is linked to your page on GitHub.<br>
+• Read through Dieter Rams' principles of design (linked in resources).
+• Write out your own 10 principles.<br>
+• These should be done in HTML, without styling, using just line breaks. <br>
+• Your principles can follow the ones set by Dieter, or steer away from them.<br> 
+<br>
+</p>
+	
+	<div class="lineup"></div>
 	
 	<p>
 <h3>Sep. 15</h3> <br>
