--- a/resources.html
+++ b/resources.html
@@ -122,6 +122,13 @@ p    {color: black;}
 
 <div class="lineup"></div>
 <p>
+<h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">Dieter Rams: 10 Principles for Good Design</a><br></h2>
+</p>	
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="https://www.w3schools.com/css/css_positioning.asp" target="_blank">CSS Positioning Guide</a><br></h2>
 </p>	
 	
