--- a/calendar.html
+++ b/calendar.html
@@ -117,8 +117,28 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+		<p>
+<h3>Sep. 22</h3> <br>
+<strong>Class 9, Wednesday</strong><br>
+• Calculator reviews from those who are ready.<br>
+• Discussion of programming issues and solutions.<br>
+• Introduction to responsive design: sample lab.<br>
+• What is Swiss Design lecture?.<br>
+• Finish programming or begin sketches for Swiss responsive posters.<br>
+
+	<br>
+	<strong>For Wednesday:</strong><br>
+• Ensure your programmed calculator works and is linked to your page on GitHub.<br>
+• These will be graded Monday evening, so they need to be accessible on your Github page.<br>
+• Read through Dieter Rams' principles of design (if you have not already).<br>
+• Write out your own 10 principles (if you have not already)<br>
+• These should be done in HTML, without styling, using just line breaks. <br>
+• Your principles can follow the ones set by Dieter, or steer away from them.<br> 
+• Link to these in your GitHub.<br>
+<br>
+</p>
 	
-<!--		<div class="lineup"></div>-->
+	<div class="lineup"></div>
 		<p>
 <h3>Sep. 20</h3> <br>
 <strong>Class 8, Monday</strong><br>
