--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,10 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+	<p>
+	<strong>Reminder to the class about the UIC policy for unexcused absences which is listed in our syllabus:
+	Students who accumulate 3 or more unexcused absences may be asked to withdraw from class and/or risk receiving a failing grade. </strong>
+
 	
 		<p>
 <h3>Sep. 22</h3> <br>
@@ -123,11 +127,11 @@ p    {color: black;}
 • Calculator reviews from those who are ready.<br>
 • Discussion of programming issues and solutions.<br>
 • Introduction to responsive design: sample lab.<br>
-• What is Swiss Design lecture?.<br>
+• What is Swiss Design lecture?<br>
 • Finish programming or begin sketches for Swiss responsive posters.<br>
 
 	<br>
-	<strong>For Wednesday:</strong><br>
+	<strong>For Monday:</strong><br>
 • Ensure your programmed calculator works and is linked to your page on GitHub.<br>
 • These will be graded Monday evening, so they need to be accessible on your Github page.<br>
 • Read through Dieter Rams' principles of design (if you have not already).<br>
