--- a/projects.html
+++ b/projects.html
@@ -369,74 +369,177 @@ p    {color: black;}
 </style>
 </head>
 <body>
-		<div class="menu">
-	<strong><a href="index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="calendar.html" target="_self">Calendar</a>&nbsp;&nbsp;&nbsp;<a href="projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;<a href="resources.html" target="_self">Resources</a></div>
-	
+	<div class="menu">
+	<strong><a href="https://mjanic3.github.io/DES350/index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://mjanic3.github.io/DES350/calendar.html" target ="_self">Calendar</a>&nbsp;&nbsp;&nbsp;Projects&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
 	
 <h1>Projects</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
+<p>
+<h2>Project 5 / Final – National Parks</h2><br>
+	
+• We will create a campaign to promote a National Park of your choice.<br>
+• We will investigate best user experience practices applied to developing content for the web.<br>
+• This will include developing a poster, animation, and a website that work cohesively together.<br>
+• We will be using the grid structres inspired by Massimo Vignelli in all aspects of the project.<br>
+• The campaign will cross-link the websites and allow various access and exit points to the user. <br>
+
+<br>
+</p>
+	
+	
+	<div class="lineup"></div>
+	<p>
+<h2>Project 4 / Midterm – The Portfolio</h2><br>
+	
+• Research 2 to 3 sites that are good examples of a portfolio site. Publish links and a couple points illustrating why you chose them.<br>
+• Redesign your GitHub page keeping in mind the sites you researched to show your work above the fold, and an About section below.<br>
+• Include at least one animation over time – preferable as a link roll-over.<br>
+• Keep the site easy to access and legible. <br>
+
+<br>
+</p>
+	
+
+	<div class="lineup"></div>
+<p>
+<h2>Project 3 – The HTML Portrait</h2><br>
+	
+	<div class="mainHolder">
+		
+		
+		
+				<div class="earRight"></div>
+<div class="earLeft"></div>
+	<div class="beard"></div>
+				<div class="trapezoid"></div>
+
+	<div class="moon"></div>
+		<div class="floatingCircle"></div>
+		<div class="nose"></div>
+		<div class="noseCover1"></div>
+		<div class="noseCover2"></div>
+		<div class="noseCover3"></div>
+
+	<div class="bridge"></div>
+	
+		<div class="bridge-cover"></div>
+
+		<div class="glassLeft"></div>
+		<div class="glassRight"></div>
+				<div class="eyeLeft"></div>
+<div class="eyeRight"></div>
+	
+		<div class="hairOne"></div>
+		<div class="mouth"></div>
+				<div class="triangleOne"></div>
+<div class="triangleTwo"></div>
+<div class="triangleThree"></div>
+</div>
+	
+	
+	
+	
+	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
+• Choose a portrait you took which focuses on the face.<br>
+• This can be a self-portrait, a photo of someone else, or a photo of a pet.<br>
+• In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
+• Start with an artboard that is sized to your screen. Change Illustrator preferences to work with pixels. <br>
+• The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
+• Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
+• Once your drawing is approved, recreate it using only DIVs in HTML. <br>
+• Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
+
+<br>
+</p>		
+	
+	
+	
+	
+	<div class="lineup"></div>
+<p>
+<h2>Project 2.2 – Web-Based poster – a focus on the scroll</h2><br>
+• Create a drawing of how you will distribute the information vertically.<br>
+• Create a detailed drawing of your project in Illustrator.<br>
+• Determine percentage breakpoints, with the total adding up to 100%.<br>
+• This page should feel like a scrollable poster, and scale with the browser. <br>
+<br>
+</p>
+	
+	
+	
+	<div class="lineup"></div>
+<p>
+<h2>Project 2.1 – Information Architecture and a Web-Based poster – Styling the Dieter Rams Essay</h2><br>
+• First, style your essay with a focus on legibility and organization of information.<br>
+• Focus on typography and spacing between paragraphs.<br>
+• The final HTML page should be: legible, clear, easy to read.<br><br>
+	
+• Next, draw a wireframe for a second version of the page that focuses on rhythm and vertical movement. This page should feel like a scrollable poster. <br>
+<br>
+</p>	
+	
+	
 
 	
-<!--			<div class="lineup"></div>-->
-
 	
+	<div class="lineup"></div>
+<p>
+<h2>Project 1.2 – HTML Calculator – Based on the work of Dieter Rams</h2><br>
+• We will first research the work of Dieter Rams.<br>
+• Create a moodboard of elements from his designs to use for the calculator.<br>
+• Design your calculator in Illustrator. Take into account: size in browser, alignment, color, typography. Include a roll-over state on one of the buttons.<br>
+• Code your design using your previous iteration and update CSS to reflect your new design.<br>
+• Use the W3 Schools CSS tutorial to determine the styling: <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
+<br>
+</p>	
+	
+	
+	<div class="lineup"></div>
+<p>
 <h2>Project 1 – HTML Calculator</h2><br>
-We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: <br><br>
+We will code a simple calculator using HTML and Javascript in class. 
+We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations:
+<br>
 • Functionality – how does it work?<br>
 • User experience – how will a user interact with it?<br>
 • User Familiarity – how do calculators usually look? <br>
 • Aesthetics – does the style add or detract from the function? <br>
-• The calculator will be styled in two ways: one freeform, and one focusing on the work of a designer.<br>
 <br>
 <br><br>
+</p>
+	
 
 
 </div>
 
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2021<br>
+<p>DES 350 / Fall, 2019<br>
 Mondays + Wednesdays<br>
-Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a> </p>
+Instructor: Michal Janicki</p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-	
-	<a href="https://geo-ags.github.io/DES350/" target="_blank">Geo A.</a> <br>
-	<a href="https://tarmit3.github.io/DES350/" target="_blank">Trina A.</a> <br>
-
-<a href="https://butto99.github.io/DES350/" target="_blank">Omar B.</a> <br>
-	<a href="https://mbibay2.github.io/des350/" target="_blank">Michaella B.</a> <br>
-	<a href="https://acando2.github.io/DES350/" target="_blank">Ariane C.</a> <br>
-		<a href="https://jackieg13.github.io/DES-350/" target="_blank">Jacqueline G.</a> <br>
-
-		<a href="https://edgarjprism.github.io/DES350/Index.html" target="_blank">Edgar J.</a> <br>
-			<a href="https://jkatre3.github.io/DES350/" target="_blank">Jessica K.</a> <br>
-<a href="https://viannko.github.io/DES350/" target="_blank">Viann K.</a> <br>
-
-	
-				<a href="https://britym.github.io/des350/" target="_blank">Briana M.</a> <br>
-				<a href="https://jan3t.github.io/DES350/" target="_blank">Janet N.</a> <br>
-
-
-			<a href="https://riocasso.github.io/DES350/" target="_blank">Romario O.</a> <br>
-
-	<a href="https://cpalacios48.github.io/DES350/" target="_blank">Christian P.</a> <br>	
-	<a href="https://cpeaco4.github.io/DES-350/ " target="_blank">Creighton P.</a> <br>	
-<a href="https://epined7.github.io/350/" target="_blank">Edgar P.</a> <br>	
-	<a href="https://eroman30.github.io/DES350/index.html" target="_blank">Elian R.</a> <br>	
-	<a href="https://djrobles.github.io/DES350/index.html" target="_blank">David R.</a> <br>	
-		<a href="https://frodri35.github.io/DES350/Index.html" target="_blank">Frida R.</a> <br>	
-
-
-	<a href="https://enriquejr22.github.io/DES350/index.html" target="_blank">Enrique S.</a> <br>	
-
-	<a href="https://carolines-sketchbook.github.io/DES350/" target="_blank">Caroline S.</a> <br>	
-	<a href="https://nsamtani.github.io/DES350/" target="_blank">Neha S.</a> <br>	
-<a href="https://maywalan.github.io/DES350/" target="_blank">Matach W.</a> <br>
-	
-  <br>
+<a href="https://zali30.github.io/DES350/" target="_blank">Ziad Ali</a> <br>
+<a href="https://k11borrero.github.io/DES350/" target="_blank">Keila Borrero</a> <br>
+<a href="https://anhvyb.github.io/DES350/" target="_blank">Vy Bui</a> <br>
+<a href="https://kdirnb2.github.io/DES350/" target="_blank">Katelyn Dirnberger</a> <br>
+<a href="https://tmfriese.github.io/DES350/" target="_blank">Tiffany Friese</a> <br>
+<a href="https://agarc88.github.io/DES350/" target="_blank">Alden Garcia</a> <br>
+<a href="https://cgasid2.github.io/DES350/" target="_blank">Cecily Gasidlo</a> <br>
+<a href="https://gira006.github.io/DES350/" target="_blank">Daniel Giraldo</a> <br>
+<a href="https://ahalam2.github.io/DES350/" target="_blank">Angelika Halama</a> <br>
+<a href="https://donteking.github.io/DES350/" target="_blank">Donte King</a> <br>
+<a href="https://samorie.github.io/DES350/" target="_blank">Sammy Lien</a> <br>
+<a href="https://dmejia11.github.io/DES350/" target="_blank">Diana Mejia</a> <br>
+<a href="https://jmiran28.github.io/DES350/" target="_blank">John-John Miranda</a> <br>
+<a href="https://snguye44.github.io/DES350/" target="_blank">Sarah Nguyen</a> <br>	
+<a href="https://lpark25.github.io/DES350/" target="_blank">Lina Park</a> <br>	     
+<a href="https://trando3.github.io/DES350/" target="_blank">Teris Randolph <br>		
+<a href="https://avelaz36.github.io/DES350/" target="_blank">Arturo Velazquez</a> <br>	
+<a href="https://vweiss4.github.io/DES350/" target="_blank">Vince Weiss</a> <br><br>
 </p>
+
 </div>
 
 </body>
