--- a/projects.html
+++ b/projects.html
@@ -369,39 +369,40 @@ p    {color: black;}
 </style>
 </head>
 <body>
-	<div class="menu">
-	<strong><a href="https://mjanic3.github.io/DES350/index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://mjanic3.github.io/DES350/calendar.html" target ="_self">Calendar</a>&nbsp;&nbsp;&nbsp;Projects&nbsp;&nbsp;&nbsp;<a href="https://mjanic3.github.io/DES350/resources.html" target="_self">Resources</a></div>
+		<div class="menu">
+	<strong><a href="index.html" target="_self">Advanced Interactive Design</a></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="calendar.html" target="_self">Calendar</a>&nbsp;&nbsp;&nbsp;<a href="projects.html" target="_self">Projects</a>&nbsp;&nbsp;&nbsp;<a href="resources.html" target="_self">Resources</a></div>
+	
 	
 <h1>Projects</h1>
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
-<p>
-<h2>Project 5 / Final – National Parks</h2><br>
-	
-• We will create a campaign to promote a National Park of your choice.<br>
-• We will investigate best user experience practices applied to developing content for the web.<br>
-• This will include developing a poster, animation, and a website that work cohesively together.<br>
-• We will be using the grid structres inspired by Massimo Vignelli in all aspects of the project.<br>
-• The campaign will cross-link the websites and allow various access and exit points to the user. <br>
-
-<br>
-</p>
-	
-	
-	<div class="lineup"></div>
+<p>	
 	<p>
-<h2>Project 4 / Midterm – The Portfolio</h2><br>
-	
-• Research 2 to 3 sites that are good examples of a portfolio site. Publish links and a couple points illustrating why you chose them.<br>
-• Redesign your GitHub page keeping in mind the sites you researched to show your work above the fold, and an About section below.<br>
-• Include at least one animation over time – preferable as a link roll-over.<br>
-• Keep the site easy to access and legible. <br>
+<h2>Project 5 – National Parks</h2><br>	
+	• We will develop a poster about a National Park based on the Unigrid created by Massimo Vignelli.<br>
+	• Next, we will create a short looped animation for the poster. <br>
+	• Using the established art direction, each participant will create a micro-site to present more information and create a linked system to explore other parks. <br>
+<br>
 
 <br>
-</p>
-	
+</p>	
 
+	
 	<div class="lineup"></div>
+<p>
+<h2>Project 4 – Mid Term</h2><br>	
+	• The mid-term will take place on Wednesday, October 21st, and will be due before the end of class.<br>
+	• We will be designing your GitHub home page by adding CSS styling. <br>
+<br>
+
+<br>
+</p>	
+	
+	
+	
+	
+	
+<div class="lineup"></div>
 <p>
 <h2>Project 3 – The HTML Portrait</h2><br>
 	
@@ -439,107 +440,132 @@ p    {color: black;}
 	
 	
 	
-	
 	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
 • Choose a portrait you took which focuses on the face.<br>
-• This can be a self-portrait, a photo of someone else, or a photo of a pet.<br>
 • In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
-• Start with an artboard that is sized to your screen. Change Illustrator preferences to work with pixels. <br>
+• Change Illustrator preferences to work with pixels. <br>
+• Work with an artboard that is 1920px by 1080px.<br>
 • The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
 • Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
 • Once your drawing is approved, recreate it using only DIVs in HTML. <br>
 • Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
 
 <br>
-</p>		
+</p>			
+		
 	
 	
 	
-	
-	<div class="lineup"></div>
-<p>
-<h2>Project 2.2 – Web-Based poster – a focus on the scroll</h2><br>
-• Create a drawing of how you will distribute the information vertically.<br>
-• Create a detailed drawing of your project in Illustrator.<br>
-• Determine percentage breakpoints, with the total adding up to 100%.<br>
-• This page should feel like a scrollable poster, and scale with the browser. <br>
-<br>
-</p>
-	
-	
-	
-	<div class="lineup"></div>
-<p>
-<h2>Project 2.1 – Information Architecture and a Web-Based poster – Styling the Dieter Rams Essay</h2><br>
-• First, style your essay with a focus on legibility and organization of information.<br>
-• Focus on typography and spacing between paragraphs.<br>
-• The final HTML page should be: legible, clear, easy to read.<br><br>
-	
-• Next, draw a wireframe for a second version of the page that focuses on rhythm and vertical movement. This page should feel like a scrollable poster. <br>
+<div class="lineup"></div>
+
+	<p>
+<h2>Project 2 – Information Architecture</h2><br>
+• We will discuss Dieter Rams and his 10 principles of design. <br>
+• We will look at how these principles apply to your work and write an essay responding to each of his points.<br>
+• We will create a responsive web-based poster based on your essay.<br>
+• This poster will have at least one break-point for smaller screens.<br>
+• Lastly, we will create a copy of the design and adjust the CSS styling based on the work of any chosen designer or studio. <br>
+
 <br>
 </p>	
 	
-	
+			<div class="lineup"></div>
 
 	
-	
-	<div class="lineup"></div>
-<p>
-<h2>Project 1.2 – HTML Calculator – Based on the work of Dieter Rams</h2><br>
-• We will first research the work of Dieter Rams.<br>
-• Create a moodboard of elements from his designs to use for the calculator.<br>
-• Design your calculator in Illustrator. Take into account: size in browser, alignment, color, typography. Include a roll-over state on one of the buttons.<br>
-• Code your design using your previous iteration and update CSS to reflect your new design.<br>
-• Use the W3 Schools CSS tutorial to determine the styling: <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS Tutorial on W3 Schools</a><br>
-<br>
-</p>	
-	
-	
-	<div class="lineup"></div>
-<p>
 <h2>Project 1 – HTML Calculator</h2><br>
-We will code a simple calculator using HTML and Javascript in class. 
-We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations:
-<br>
+We will code a simple calculator using HTML and Javascript in class. We will then add CSS code to style the calculator. The calculator will be styled using CSS with the following considerations: <br><br>
 • Functionality – how does it work?<br>
 • User experience – how will a user interact with it?<br>
 • User Familiarity – how do calculators usually look? <br>
 • Aesthetics – does the style add or detract from the function? <br>
+• The calculator will be styled in two ways: one freeform, and one focusing on the work of a designer.<br>
 <br>
 <br><br>
 </p>
 	
 
 
+	
+	
+
+
 </div>
 
 <div class="rightcolumn">
-<p>DES 350 / Fall, 2019<br>
+<p>DES 350 / Fall, 2020<br>
 Mondays + Wednesdays<br>
-Instructor: Michal Janicki</p>
+Instructor: <a href="http://studiobema.com/" target="_blank">Michal Janicki</a></p>
 
 <div class="lineup"></div>
 <p> <strong>Participants</strong><br>
-<a href="https://zali30.github.io/DES350/" target="_blank">Ziad Ali</a> <br>
-<a href="https://k11borrero.github.io/DES350/" target="_blank">Keila Borrero</a> <br>
-<a href="https://anhvyb.github.io/DES350/" target="_blank">Vy Bui</a> <br>
-<a href="https://kdirnb2.github.io/DES350/" target="_blank">Katelyn Dirnberger</a> <br>
-<a href="https://tmfriese.github.io/DES350/" target="_blank">Tiffany Friese</a> <br>
-<a href="https://agarc88.github.io/DES350/" target="_blank">Alden Garcia</a> <br>
-<a href="https://cgasid2.github.io/DES350/" target="_blank">Cecily Gasidlo</a> <br>
-<a href="https://gira006.github.io/DES350/" target="_blank">Daniel Giraldo</a> <br>
-<a href="https://ahalam2.github.io/DES350/" target="_blank">Angelika Halama</a> <br>
-<a href="https://donteking.github.io/DES350/" target="_blank">Donte King</a> <br>
-<a href="https://samorie.github.io/DES350/" target="_blank">Sammy Lien</a> <br>
-<a href="https://dmejia11.github.io/DES350/" target="_blank">Diana Mejia</a> <br>
-<a href="https://jmiran28.github.io/DES350/" target="_blank">John-John Miranda</a> <br>
-<a href="https://snguye44.github.io/DES350/" target="_blank">Sarah Nguyen</a> <br>	
-<a href="https://lpark25.github.io/DES350/" target="_blank">Lina Park</a> <br>	     
-<a href="https://trando3.github.io/DES350/" target="_blank">Teris Randolph <br>		
-<a href="https://avelaz36.github.io/DES350/" target="_blank">Arturo Velazquez</a> <br>	
-<a href="https://vweiss4.github.io/DES350/" target="_blank">Vince Weiss</a> <br><br>
-</p>
+	<a href="https://japoli2.github.io/Apolinar/" target="_blank">Joanna Apolinar Cirilo </a> <br>
 
+<a href="https://mcrame4.github.io/DES350/" target="_blank">Mary Jane Cramer</a> <br>
+
+
+<a href="https://vdiaz24.github.io/DES350/" target="_blank">Viviana Diaz</a> <br>
+
+
+
+<a href="https://nermer2.github.io/DES350/" target="_blank">Nadia Ermer</a> <br>
+
+
+
+<a href="https://arigonzalez.github.io/DES350/" target="_blank">Ari Gonzalez</a> <br>
+
+
+<a href="https://kgotiwale.github.io/DES-350/" target="_blank">Kshitij Gotiwale</a> <br>
+
+
+
+<a href="https://fgozon2.github.io/DES350/" target="_blank">Faye Gozon</a> <br>
+
+
+<a href="https://hhensl2.github.io/DES350/" target="_blank">Haley Hensley</a> <br>
+
+
+
+<a href="https://thinds3.github.io/DES-350/" target="_blank">Tommy Hinds</a> <br>
+
+
+
+<a href="https://alhsieh2.github.io/DES350/" target="_blank">Ann Hsieh</a> <br>
+
+
+
+
+<a href="https://lphuynh9.github.io/DES350/" target="_blank">Linh Huynh</a> <br>
+
+
+<a href="https://ejaram4.github.io/DES350/" target="_blank">Erika Jaramillo</a> <br>
+
+
+
+<a href="https://maddielock17.github.io/DES350/" target="_blank">Maddie Lockwood</a> <br>
+
+
+
+<a href="https://slopez581.github.io/DES350/" target="_blank">Sebastian Lopez</a> <br>
+
+
+
+<a href="https://dortig2.github.io/DES350/" target="_blank">Daniel Ortigoza</a> <br>
+
+
+
+
+<a href="https://tpaws.github.io/DES350/" target="_blank">Victoria Pawlyk</a> <br>
+
+
+
+
+<a href="https://asoto29.github.io/DES350/" target="_blank">Antonio Soto</a> <br>
+
+
+
+<a href="https://elliespearman2022.github.io/DES350/index" target="_blank">Ellie Spearman</a> <br>	
+  <br>
+</p>
 </div>
 
 </body>
