--- a/calendar.html
+++ b/calendar.html
@@ -117,6 +117,21 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+				<p>
+<h3>Sep. 29</h3> <br>
+<strong>Class 11, Wednesday</strong><br>
+• QOTD: What is a design object you have been a fan of recently?<br>
+• Review of a few finished calculator examples. <br>
+• New Resource: Creating Shapes in CSS.<br>
+• Lab: review poster design in Illustrator, and begin programming.<br>
+
+	<br>
+	<strong>For Monday:</strong><br>
+• Make sure you have programming started, bonus if you have the Desktop version ready.<br>
+<br>
+</p>
+	
+	<div class="lineup"></div>
 			<p>
 <h3>Sep. 27</h3> <br>
 <strong>Class 10, Monday</strong><br>
