--- a/resources.html
+++ b/resources.html
@@ -123,6 +123,13 @@ p    {color: black;}
 	
 <div class="lineup"></div>
 <p>
+<h2><a href="https://css-tricks.com/the-shapes-of-css/" target="_blank">The Shapes of CSS</a><br></h2>
+</p>	
+	
+	
+	
+<div class="lineup"></div>
+<p>
 <h2><a href="https://www.interaction-design.org/literature/article/repetition-pattern-and-rhythm" target="_blank">Repetition, Pattern, and Rhythm Article</a><br></h2>
 </p>	
 	
@@ -131,10 +138,7 @@ p    {color: black;}
 <h2><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/percentage" target="_blank">The Percentage on Mozilla Developer</a><br></h2>
 </p>	
 	
-		
-	
-	
-	
+
 <div class="lineup"></div>
 <p>
 <h2><a href="https://readymag.com/shuffle/dieter-rams/" target="_blank">Dieter Rams: 10 Principles for Good Design</a><br></h2>
