--- a/calendar.html
+++ b/calendar.html
@@ -116,7 +116,22 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+					<p>
+<h3>Oct. 04</h3> <br>
+<strong>Class 12, Monday</strong><br>
+• Lab for design and code of the responsive poster.<br>
+• Individual check-ins on progress. <br>
+
+	<br>
+	<strong>For Wednesday:</strong><br>
+• You should have final approval on the design, and the desktop version coded.<br>
+<br>
+</p>
 	
+	
+	
+	
+		<div class="lineup"></div>
 				<p>
 <h3>Sep. 29</h3> <br>
 <strong>Class 11, Wednesday</strong><br>
