--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,21 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+						<p>
+<h3>Oct. 06</h3> <br>
+<strong>Class 13, Wednesday</strong><br>
+• Lab for design and code of the responsive poster.<br>
+• Individual check-ins on progress. <br>
+
+	<br>
+	<strong>For Monday:</strong><br>
+• Final coded version of your poster with one breakpoint.<br>
+<br>
+</p>
+	
+	
+	
+			<div class="lineup"></div>
 					<p>
 <h3>Oct. 04</h3> <br>
 <strong>Class 12, Monday</strong><br>
