--- a/calendar.html
+++ b/calendar.html
@@ -117,6 +117,23 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 						<p>
+<h3>Oct. 11</h3> <br>
+<strong>Class 14, Monday</strong><br>
+• Lab for uploading / finishing your posters.<br>
+• DreamWeaver follow-along: animating divs. <br>
+• Crit of poster progress. <br>
+
+	<br>
+	<strong>For Wednesday:</strong><br>
+• Finished version of your poster (including one break point) uploaded to GitHub.<br>
+• We will be starting project 3 on Wednesday.<br>	
+<br>
+</p>
+		
+	
+				<div class="lineup"></div>
+
+						<p>
 <h3>Oct. 06</h3> <br>
 <strong>Class 13, Wednesday</strong><br>
 • Lab for design and code of the responsive poster.<br>
