--- a/projects.html
+++ b/projects.html
@@ -377,6 +377,61 @@ p    {color: black;}
 	<div class="lineupmain"></div>
 <div class="leftcolumn">
 
+	<p>
+<h2>Project 3 – The HTML Portrait</h2><br>
+	
+	<div class="mainHolder">
+		
+		
+		
+				<div class="earRight"></div>
+<div class="earLeft"></div>
+	<div class="beard"></div>
+				<div class="trapezoid"></div>
+
+	<div class="moon"></div>
+		<div class="floatingCircle"></div>
+		<div class="nose"></div>
+		<div class="noseCover1"></div>
+		<div class="noseCover2"></div>
+		<div class="noseCover3"></div>
+
+	<div class="bridge"></div>
+	
+		<div class="bridge-cover"></div>
+
+		<div class="glassLeft"></div>
+		<div class="glassRight"></div>
+				<div class="eyeLeft"></div>
+<div class="eyeRight"></div>
+	
+		<div class="hairOne"></div>
+		<div class="mouth"></div>
+				<div class="triangleOne"></div>
+<div class="triangleTwo"></div>
+<div class="triangleThree"></div>
+</div>
+	
+	
+	
+	<i>Self-portrat illustration by Robert M. Kerr. Rendered in HTML and CSS.</i><br><br>
+• Choose a portrait you took which focuses on the face.<br>
+• In Illustrator, create two drawings of the portrait using geometric shapes. Grayscale only. <br>
+• Change Illustrator preferences to work with pixels. <br>
+• Work with an artboard that is 1920px by 1080px.<br>
+• The drawing should be minimal and convey emotion (ex. Apple Animojis). <br>
+• Consider the types of shapes you can create in HTML – rectangles, circles, ovals and triangles. <br>
+• Once your drawing is approved, recreate it using only DIVs in HTML. <br>
+• Use DIVs position absolute, and start with the drawing aligning to the top and left of your browser. <br>
+
+<br>
+</p>			
+	
+	
+	<div class="lineup"></div>
+	
+	
+	
 	
 	<h2>Project 2 – Information Architecture</h2><br>
 • We will discuss Dieter Rams and his 10 principles of design. <br>
