--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,24 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+								<p>
+<h3>Oct. 11</h3> <br>
+<strong>Class 16, Monday</strong><br>
+• Review of basic animation.<br>
+• Remember to link your jpg to your GitHub index page.<br>
+• Pick a portrait and begin programming. <br>
+• Here is an <a href="portrait.html">example</a> of a portrait with animation. <br> 
+
+	<br>
+	<strong>Wednesday:</strong><br>
+• We will be having a mid-term exercise due at the end of class.<br>
+<br>
+</p>
+	
+	
+	
+	
+		<div class="lineup"></div>
 	
 							<p>
 <h3>Oct. 11</h3> <br>
