--- a/calendar.html
+++ b/calendar.html
@@ -121,7 +121,8 @@ p    {color: black;}
 <strong>Class 16, Monday</strong><br>
 • Review of basic animation.<br>
 • Remember to link your jpg to your GitHub index page.<br>
-• Pick a portrait and begin programming. <br>
+• Pick a portrait and create a color version. Consider the background colors as well. <br>
+• Program your work – use of absolute positioning and the z-index is recommended. <br>
 • Here is an <a href="portrait.html">example</a> of a portrait with animation. <br> 
 
 	<br>
