--- a/calendar.html
+++ b/calendar.html
@@ -117,9 +117,9 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 								<p>
-<h3>Oct. 11</h3> <br>
+<h3>Oct. 18</h3> <br>
 <strong>Class 16, Monday</strong><br>
-• Review of basic animation.<br>
+• Review of basic CSS animation.<br>
 • Remember to link your jpg to your GitHub index page.<br>
 • Pick a portrait and create a color version. Consider the background colors as well. <br>
 • Program your work – use of absolute positioning and the z-index is recommended. <br>
