--- a/calendar.html
+++ b/calendar.html
@@ -115,7 +115,24 @@ p    {color: black;}
 	
 	
 <div class="leftcolumn">
+	<p>
+<h3>Oct. 20</h3> <br>
+<strong>Class 17, Wednesday</strong><br>
+• The class will be a mid-term exercise.<br> 
+• Please come to calss on time, or let me know in advance if you cannot make it.<br>
+• The mid term will be graded on the same day.<br>
+
+	<br>
+	<strong>For Monday:</strong><br>
+• You should have a good programming foundation for your portrait.<br>
+• Your portrait should be coded using only CSS and HTML.<br>
+<br>
+</p>
+		
 	
+	
+	
+			<div class="lineup"></div>
 								<p>
 <h3>Oct. 18</h3> <br>
 <strong>Class 16, Monday</strong><br>
