--- a/resources.html
+++ b/resources.html
@@ -119,6 +119,12 @@ p    {color: black;}
 <p>
 	<h2><a href="http://github.com" target="_blank">http://github.com</a><br></h2>
 </p>
+	
+	
+		<div class="lineup"></div>
+<p>
+<h2><a href="https://jsfiddle.net/Tripad/qnGKj/2/" target="_blank">Rounding Individual Corners in CSS</a><br></h2>
+</p>	
 
 	
 	<div class="lineup"></div>
