--- a/calendar.html
+++ b/calendar.html
@@ -119,7 +119,7 @@ p    {color: black;}
 <h3>Oct. 20</h3> <br>
 <strong>Class 17, Wednesday</strong><br>
 • The class will be a mid-term exercise.<br> 
-• Please come to calss on time, or let me know in advance if you cannot make it.<br>
+• Please come to class on time, or let me know in advance if you cannot make it.<br>
 • The mid term will be graded on the same day.<br>
 
 	<br>
