--- a/calendar.html
+++ b/calendar.html
@@ -115,6 +115,37 @@ p    {color: black;}
 	
 	
 <div class="leftcolumn">
+	
+				<h3>Oct. 25</h3> <br>
+<strong>Class 18, Monday</strong><br><br>
+<br>
+• Let's review a couple examples from the mid-term and chat about any next steps.<br><br>
+• First, finish your portrait coded in HTML and CSS.<br>
+• Next, on a piece of paper, draw out or note each animation you would like to implement.<br>
+• Remember that the animation should loop infinitely. Your animation can be very subtle (think hair blowing in the wind, eyes moving slightly), or if you prefer, more dramatic. <br>
+• Reference the Resources section of the site for animation techniques. <br>
+• Implement each animation one by one. Remember that once you get one working, you can copy and paste the code. Be wary of spelling mistakes or not closing brackets. <br>
+• Once your animation works well and you are satisfied with the result, upload it to Github and link to it on your home page. <br>
+<br>
+Reference Files:<br>
+• A few ideas for the facial animation can be found online. Below are two references, but feel free to get creative, or to do your own research:
+• <a href="https://www.behance.net/gallery/30132857/99-Animated-Emojis-for-Closer-Motion" target="_blank">Behance Emoji Example</a> <br>
+<br>
+Coding References:<br>
+• <a href="https://stackoverflow.com/questions/14446677/how-to-make-3-corner-rounded-triangle-in-css" target="_blank">Rounded corner triangle </a><br>
+• <a href="https://mjanic3.github.io/DES350/portrait.html" target="_blank">The example I showed in class</a> – you can view the source to see the animation.<br>
+<br>
+<br>
+For Wednesday:<br>
+• Upload your progress to GitHub. <br>
+• Be ready to explain how the avatar you created resembles your subject, and why the motion you chose to implement adds to the representation. <br>
+<br><br>	
+	
+	
+				<div class="lineup"></div>
+
+	
+	
 	<p>
 <h3>Oct. 20</h3> <br>
 <strong>Class 17, Wednesday</strong><br>
