--- a/calendar.html
+++ b/calendar.html
@@ -116,6 +116,22 @@ p    {color: black;}
 	
 <div class="leftcolumn">
 	
+	
+		<p>
+<h3>Oct. 27</h3> <br>
+<strong>Class 18, Wednesday</strong><br>
+• Motion Design Lecture / Review.<br> 
+• Smaller group reviews of animation so far.<br>
+• Lab for finishing the animation.<br>
+
+	<br>
+	<strong>For Monday:</strong><br>
+• Please update your animated portrait and link to it on your GitHub.<br>
+<br>
+</p>
+	
+	<div class="lineup"></div>
+	
 				<h3>Oct. 25</h3> <br>
 <strong>Class 18, Monday</strong><br><br>
 <br>
