--- a/calendar.html
+++ b/calendar.html
@@ -117,6 +117,26 @@ p    {color: black;}
 <div class="leftcolumn">
 	
 	
+			<p>
+<h3>Nov. 01</h3> <br>
+<strong>Class 19, Monday</strong><br>
+• Animated HTML portrait review.<br>
+• Lecture and intro to the final project: National Parks.<br>
+• Research and selection of your final topic.<br>
+	
+	<br>
+	<strong>For Wednesday:</strong><br>
+• Create a hand-drawn wire of your poster.<br>
+• Include: Park Name, Location, Longitude and Latitude Numbers, Established Date, 5 Activities.<br>
+• Check the <a href="https://en.m.wikipedia.org/wiki/List_of_national_parks_of_the_United_States" target="_blank">Wikipedia site</a> for info. <br><br>
+<br>
+</p>
+	
+	
+	
+	<div class="lineup"></div>
+	
+	
 		<p>
 <h3>Oct. 27</h3> <br>
 <strong>Class 18, Wednesday</strong><br>
