--- a/calendar.html
+++ b/calendar.html
@@ -123,6 +123,7 @@ p    {color: black;}
 • Animated HTML portrait review.<br>
 • Lecture and intro to the final project: National Parks.<br>
 • Research and selection of your final topic.<br>
+• Link to class lecture document: <a href="National_Parks_Lecture.pdf">Class Lecture PDF</a>
 	
 	<br>
 	<strong>For Wednesday:</strong><br>
@@ -130,6 +131,35 @@ p    {color: black;}
 • Include: Park Name, Location, Longitude and Latitude Numbers, Established Date, 5 Activities.<br>
 • Check the <a href="https://en.m.wikipedia.org/wiki/List_of_national_parks_of_the_United_States" target="_blank">Wikipedia site</a> for info. <br><br>
 <br>
+	<strong>Parks Taken:</strong><br>
+	• Death Valley<br>
+	• Denali<br>
+	• Everglades<br>
+	• Great Smoky Mountains<br>
+	• Hawaii VOlcanoes<br>
+	• Olympic, Washington<br>
+	• Sequoia<br>
+	• Yosemite<br>
+	• Zion<br>
+	• Arches<br>
+	• Gates of the Arctic, Alaska<br>
+<br>
+	<strong>Suggested Open Parks:</strong><br>
+	• Acadia<br>
+	• Glacier, Montana<br>
+	• Grand Canyon<br>
+	• Grand Teton<br>
+	• Indiana Dunes<br>
+	• Joshua Tree<br>
+	• Shenandoah<br>
+	• Badlands<br>
+	• Mammoth Cave<br>
+	• Mesa Verde<br>
+	• Crater Lake<br>
+	• Rocky Mountain<br>
+	• Theodore Roosevelt<br>
+	• Yellowstone<br>
+
 </p>
 	
 	
