--- a/calendar.html
+++ b/calendar.html
@@ -124,7 +124,7 @@ p    {color: black;}
 • Lecture and intro to the final project: National Parks.<br>
 • Research and selection of your final topic.<br>
 • Link to class lecture document: <a href="National_Parks_Lecture.pdf">Class Lecture PDF</a>
-	
+	<br>
 	<br>
 	<strong>For Wednesday:</strong><br>
 • Create a hand-drawn wire of your poster.<br>
@@ -158,7 +158,7 @@ p    {color: black;}
 	• Crater Lake<br>
 	• Rocky Mountain<br>
 	• Theodore Roosevelt<br>
-	• Yellowstone<br>
+	• Yellowstone<br><br>
 
 </p>
 	
